--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<name>auth</name>
 	<description>Project by rituraj for creating and loggging in with help of
 		API given</description>
+	<packaging>war</packaging>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
